--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,12 @@
 	--border-header: #ececec;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	margin: 0;
 }
 
@@ -287,4 +292,5 @@ footer {
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-top: 60px;
+	text-decoration: none;
 }
